@@ -5,6 +5,7 @@
 
 v0.11.14 (??.06.2012)
  * Small fix in SimpleMarker. Thanks to Thomas Reuleke!
+ * FormTool::createSortLink() fixed if no params in url present. Thanks to Thomas Reuleke!
 
 v0.11.13 (11.06.2012)
  * Better check for valid TSFE
